--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-This is a test proram for a bouncing ball in bash
+===== bouncy.bash =====
+
+This is a test program for a bouncing ball in bash.
+
+
+
+
+
